Adding 'type' column in works page

--- a/src/app/components/list-elements/work-list-element/work-list-element.component.css
+++ b/src/app/components/list-elements/work-list-element/work-list-element.component.css
@@ -2,7 +2,7 @@
     width: 1000px;
     height: 45px;
     display: grid;
-    grid-template-columns: 15% auto 12%;
+    grid-template-columns: 15% auto 12.5% 12%;
     cursor: pointer;
     background-color: #bbbbbb;
 }
