--- a/src/app/components/list-elements/work-list-element/work-list-element.component.html
+++ b/src/app/components/list-elements/work-list-element/work-list-element.component.html
@@ -1,5 +1,6 @@
 <div (click)="navigateToSingleWork()" class="work-container">
     <div><p>{{date}}</p></div>
     <div><p>{{title}}</p></div>
+    <div><p>{{type}}</p></div>
     <div><p>{{grades}}/{{students}}</p></div>
 </div>
