--- a/src/app/pages/change-password-request-page/change-password-request-page.component.html
+++ b/src/app/pages/change-password-request-page/change-password-request-page.component.html
@@ -1,3 +1,9 @@
+<app-status-dialog
+*ngIf="isStatusMode" [type]="'error'"
+[title]="statusTitle" [content]="statusContent"
+(destroyButtonClick)="setStatusModeFalse()">
+</app-status-dialog>
+
 <div class="change-password-request-container">
     <div [ngSwitch]="currentStatus" class="content-container">
 
