--- a/src/app/components/dialog-elements/grades-dialog/grades-dialog.component.css
+++ b/src/app/components/dialog-elements/grades-dialog/grades-dialog.component.css
@@ -12,8 +12,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     position: fixed;
-    border: 2.5px solid #3F3F3F;
-    border-radius: 2.5px;
+    border: 2.5px solid #000000;
+    border-radius: 5px;
     background-color: #bbbbbb;
     z-index: 1;
 }
@@ -49,6 +49,7 @@
     border: 0;
     border-radius: 2.5px;
     background-color: #a3a3a3;
+    color: black;
 }
 
 .creation-btns-container {
@@ -65,6 +66,7 @@
     border-radius: 2.5px;
     cursor: pointer;
     font-family: 'Bebas Neue', sans-serif;
+    color: black;
 }
 
 .content-container {
@@ -118,6 +120,7 @@
     border-radius: 2.5px;
     cursor: pointer;
     font-family: 'Bebas Neue', sans-serif;
+    color: black;
 }
 
 .red-btn {
