--- a/src/app/components/dialog-elements/lesson-dialog/lesson-dialog.component.html
+++ b/src/app/components/dialog-elements/lesson-dialog/lesson-dialog.component.html
@@ -1,20 +1,52 @@
+<app-status-dialog
+*ngIf="isStatusMode" [type]="'error'"
+[title]="statusTitle"
+[content]="statusContent"
+(destroyButtonClick)="isStatusMode = false">
+</app-status-dialog>
+
 <div class="lesson-container">
     <p class="title-txt">{{title}}</p>
     <div class="form">
         <div>
-            <p>*Título:</p>
-            <input type="text" placeholder="Insira o título da aula (obrigatório)" 
+            <p>*Conteúdo:</p>
+            <input type="text" placeholder="Insira o conteúdo (obrigatório)" 
             [(ngModel)]="lessonTitle">
         </div>
         <div>
-            <p>*Detalhes:</p>
-            <input type="text" placeholder="Insira os detalhes da aula (obrigatório)" 
+            <p>*Desenvolivimento:</p>
+            <input type="text" placeholder="Insira o desenvolivimento (obrigatório)" 
             [(ngModel)]="details">
         </div>
         <div *ngIf="isEditMode()">
             <p>Observações:</p>
-            <input type="text" placeholder="Insira as observações da aula" 
+            <input type="text" placeholder="Insira as observações" 
             [(ngModel)]="observations">
+        </div>
+        <div>
+            <p>Habilidades:</p>
+            <input type="text" placeholder="Pesquisar Habilidades"
+            (focus)="changeInputFocus()"
+            (blur)="changeInputFocus()"
+            (input)="bnccInputChange()"
+            [(ngModel)]="bnccInput">
+            <p></p>
+            <div *ngIf="isInputFocus">
+                <div class="dropdown-select">
+                    <div *ngFor="let bncc_code of allBnccCodes" (click)="isCodeSelected = true; insertSelectCode(bncc_code.code)">
+                        {{bncc_code.description}}
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div *ngIf="isCodeSelected">
+            <p>Habilidades Selecionadas:</p>
+            <div class="selected-codes-container">
+                <div *ngFor="let selectedCode of selectedCodes" class="selected-codes">
+                    <div><p class="selected-code-txt">{{selectedCode}}</p></div>
+                    <div class="remove-code-container"><p (click)="removeSelectedCode(selectedCode)" class="remove-selected-code-txt">&#10005;</p></div>
+                </div>
+            </div>
         </div>
         <div>
             <p>Quantidade:</p>
@@ -31,6 +63,6 @@
     </div>
     <div class="btns-box">
         <button (click)="cancelOnClick()" class="red-btn">Cancelar</button>
-        <button (click)="confirmOnClick()" class="green-btn">Criar</button>
+        <button (click)="confirmOnClick()" class="green-btn">Confirmar</button>
     </div>
 </div>
