--- a/src/app/components/dialog-elements/notebook-dialog/create-edit-dialog/notebook-dialog.component.css
+++ b/src/app/components/dialog-elements/notebook-dialog/create-edit-dialog/notebook-dialog.component.css
@@ -4,13 +4,14 @@
 
 .notebook-dialog-container {
     width: 350px;
-    height: 350px;
+    min-height: 350px;
+    padding-bottom: 30px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     position: fixed;
-    border: 2.5px solid #3F3F3F;
-    border-radius: 2.5px;
+    border: 2.5px solid #000000;
+    border-radius: 5px;
     background-color: #bbbbbb;
     z-index: 1;
 }
@@ -20,43 +21,44 @@
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
-    font-size: large;
+    font-size: larger;
     font-family: 'Bebas Neue', sans-serif;
 }
 
 .form {
     width: 325px;
-    margin-top: 50px;
+    margin-top: 35px;
     margin-left: auto;
     margin-right: auto;
 }
 
 .form div {
     margin-bottom: 10px;
-    display: grid;
-    grid-template-columns: 25% auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .form p {
     margin-top: auto;
     margin-bottom: auto;
-    font-size: small;
+    font-size: medium;
     font-family: 'Bebas Neue', sans-serif;
 }
 
 .form select {
-    height: 25px;
+    height: 35px;
     margin-top: auto;
     margin-bottom: auto;
     padding-left: 10px;
     border: 0;
     border-radius: 2.5px;
     background-color: #a3a3a3;
+    color: black;
 }
 
 .btns-box {
     width: 325px;
-    margin-top: 65px;
+    margin-top: 35px;
     margin-left: auto;
     margin-right: auto;
     display: grid;
@@ -70,6 +72,7 @@
     border-radius: 2.5px;
     cursor: pointer;
     font-family: 'Bebas Neue', sans-serif;
+    color: black;
 }
 
 .red-btn {
