--- a/src/app/components/dialog-elements/notebook-dialog/finalize-dialog/finalize-dialog.component.css
+++ b/src/app/components/dialog-elements/notebook-dialog/finalize-dialog/finalize-dialog.component.css
@@ -10,8 +10,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     position: fixed;
-    border: 2.5px solid #3F3F3F;
-    border-radius: 2.5px;
+    border: 2.5px solid #000000;
+    border-radius: 5px;
     background-color: #bbbbbb;
     z-index: 1;
 }
@@ -63,6 +63,7 @@ hr {
 .grades-weight-selects div select, .grades-weight-selects div p {
     width: 150px;
     font-size: medium;
+    color: black;
 }
 
 .weight-sum-container {
@@ -107,6 +108,7 @@ hr {
     border-radius: 2.5px;
     cursor: pointer;
     font-family: 'Bebas Neue', sans-serif;
+    color: black;
 }
 
 .red-btn {
