--- a/src/app/components/dialog-elements/user-dialog/user-dialog.component.css
+++ b/src/app/components/dialog-elements/user-dialog/user-dialog.component.css
@@ -4,13 +4,13 @@
 
 .user-container {
     width: 350px;
-    height: 275px;
+    padding-bottom: 25px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     position: fixed;
-    border: 2.5px solid #3F3F3F;
-    border-radius: 2.5px;
+    border: 2.5px solid #000000;
+    border-radius: 5px;
     background-color: #bbbbbb;
     z-index: 1;
 }
@@ -33,23 +33,25 @@
 
 .form div {
     margin-bottom: 10px;
-    display: grid;
-    grid-template-columns: 25% auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .form p {
-    font-size: small;
+    font-size: medium;
     font-family: 'Bebas Neue', sans-serif;
 }
 
 .form select, .form input {
-    height: 25px;
+    height: 35px;
+    max-width: none;
     margin-top: auto;
     margin-bottom: auto;
     padding-left: 10px;
     border: 0;
     border-radius: 2.5px;
     background-color: #a3a3a3;
+    color: black;
 }
 
 .btns-box {
@@ -68,6 +70,7 @@
     border-radius: 2.5px;
     cursor: pointer;
     font-family: 'Bebas Neue', sans-serif;
+    color: black;
 }
 
 .red-btn {
