--- a/src/app/components/dialog-elements/work-dialog/work-dialog.component.css
+++ b/src/app/components/dialog-elements/work-dialog/work-dialog.component.css
@@ -10,8 +10,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     position: fixed;
-    border: 2.5px solid #3F3F3F;
-    border-radius: 2.5px;
+    border: 2.5px solid #000000;
+    border-radius: 5px;
     background-color: #bbbbbb;
     z-index: 1;
 }
@@ -21,41 +21,42 @@
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
-    font-size: large;
+    font-size: larger;
     font-family: 'Bebas Neue', sans-serif;
 }
 
 .form {
     width: 325px;
-    margin-top: 55px;
+    margin-top: 35px;
     margin-left: auto;
     margin-right: auto;
 }
 
 .form div {
     margin-bottom: 10px;
-    display: grid;
-    grid-template-columns: 25% auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .form p {
-    font-size: small;
+    font-size: medium;
     font-family: 'Bebas Neue', sans-serif;
 }
 
 .form select, .form input {
-    height: 25px;
+    height: 35px;
     margin-top: auto;
     margin-bottom: auto;
     padding-left: 10px;
     border: 0;
     border-radius: 2.5px;
     background-color: #a3a3a3;
+    color: black;
 }
 
 .btns-box {
     width: 325px;
-    margin-top: 55px;
+    margin-top: 35px;
     margin-left: auto;
     margin-right: auto;
     display: grid;
@@ -69,6 +70,7 @@
     border-radius: 2.5px;
     cursor: pointer;
     font-family: 'Bebas Neue', sans-serif;
+    color: black;
 }
 
 .red-btn {
