--- a/src/app/pages/home-page/home-page.component.css
+++ b/src/app/pages/home-page/home-page.component.css
@@ -31,6 +31,10 @@ h1 {
     font-size: medium;
 }
 
+.create-btn h1 {
+    color: black;
+}
+
 .create-btn:hover {
     background-color: #73a541ce;
 }
@@ -46,6 +50,8 @@ h1 {
     height: 60px;
     display: grid;
     grid-template-columns: 20% 20% 20% 7.5% 10% 8.5% auto;
+    border-top-left-radius: 7.5px;
+    border-top-right-radius: 7.5px;
     background-color: #E0E0E0;
 }
 
@@ -55,4 +61,12 @@ h1 {
     padding-left: 10px;
     border: 1px solid #3F3F3F;
     background-color: transparent;
+}
+
+.notebooks-header:first-child {
+    border-top-left-radius: 7.5px;
+}
+
+.notebooks-header:last-child {
+    border-top-right-radius: 7.5px;
 }
