--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,12 +1,18 @@
+<app-status-dialog
+    *ngIf="isStatusMode"
+    [type]="statusType" [title]="statusTitle"
+    [content]="statusContent"
+    (destroyButtonClick)="setStatusModeFalse()">
+</app-status-dialog>
+
 <app-notebook-dialog 
-    *ngIf="isCreateMode" [teacherId]="teacherId" 
-    (cancelButtonClick)="switchCreateMode()"
-    (confirmButtonClick)="refreshNotebooks(); switchCreateMode()" 
-    type="create" title="Criar Caderneta"
-    class="child-component">
+    *ngIf="isMode01" [teacherId]="teacherId" 
+    (cancelButtonClick)="switchMode01()"
+    (confirmButtonClick)="refreshNotebooks(); switchMode01(); setCreateStatus(); switchStatusMode();" 
+    type="create" title="Criar Caderneta">
 </app-notebook-dialog>
 
-<div [ngClass]="{ 'blur-filter': isCreateMode }" class="home-container">
+<div [ngClass]="{ 'blur-filter': isMode01 }" class="home-container">
 
     <h1 class="title-txt">Cadernetas</h1>
     <div [ngSwitch]="currentState">
@@ -14,7 +20,7 @@
         <h1 *ngSwitchCase="'loading'" class="loading-txt">Carregando...</h1>
 
         <div *ngSwitchCase="'loaded'" class="content-container">
-            <button (click)="switchCreateMode()" class="create-btn">
+            <button (click)="switchMode01()" class="create-btn">
                 <h1>Nova Caderneta</h1>
             </button>
 
@@ -25,16 +31,16 @@
             {value: 'status', name: 'Status'},
             {value: 'createDate', name: 'Data'}
             ]" [totalPages]="totalPages" (orderByOptionEvent)="orderByOnChange($event)"
-                (directionOptionEvent)="directionOnChange($event)" (pageNumOptionEvent)="pageNumOnChange($event)">
+            (directionOptionEvent)="directionOnChange($event)" (pageNumOptionEvent)="pageNumOnChange($event)">
             </app-sorting>
 
             <div class="notebooks-container">
                 <div class="notebooks-header">
                     <div>
-                        <h1>Classe</h1>
+                        <h1>Turma</h1>
                     </div>
                     <div>
-                        <h1>Matéria</h1>
+                        <h1>Disciplina</h1>
                     </div>
                     <div>
                         <h1>Bimestre</h1>
