--- a/src/app/pages/lessons-page/lessons-page.mobile.component.css
+++ b/src/app/pages/lessons-page/lessons-page.mobile.component.css
@@ -1,3 +1,12 @@
+@media screen and (width <= 1014px) {
+    
+    .lessons-container {
+        width: 754px;
+        overflow-x: auto;
+    }
+
+}
+
 @media screen and (width <= 768px) {
 
     .lessons-container {
