--- a/src/app/pages/single-notebook-page/single-notebook-page.component.css
+++ b/src/app/pages/single-notebook-page/single-notebook-page.component.css
@@ -10,24 +10,24 @@ h1 {
 }
 
 .info-container {
-    width: 500px;
+    width: 400px;
     margin-top: 35px;
 }
 
 .single-info-container {
-    height: 45px;
     margin-bottom: 7.5px;
-    display: grid;
-    grid-template-columns: 20% auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .single-info-container h1 {
     margin-top: auto;
     margin-bottom: auto;
-    font-size: larger;
+    font-size: x-large;
 }
 
 .single-info-container input {
+    height: 45px !important;
     padding-left: 10px;
     border: 0;
     border-radius: 2.5px;
