--- a/src/app/pages/user-page/user-page.component.css
+++ b/src/app/pages/user-page/user-page.component.css
@@ -10,20 +10,20 @@ h1 {
 }
 
 .info-container {
-    width: 750px;
-    margin-top: 100px;
+    width: 650px;
+    margin-top: 35px;
 }
 
 .single-info-container {
-    margin-bottom: 7.5px;
-    display: grid;
-    grid-template-columns: 20% auto;
+    margin-bottom: 25px;
+    display: flex;
+    flex-direction: column;
 }
 
 .single-info-container h1 {
     margin-top: auto;
     margin-bottom: auto;
-    font-size: larger;
+    font-size: x-large;
 }
 
 .single-info-container input {
