--- a/src/app/pages/works-page/works-page.component.html
+++ b/src/app/pages/works-page/works-page.component.html
@@ -1,17 +1,24 @@
+<app-status-dialog
+*ngIf="isStatusMode"
+[type]="'success'" [title]="'Ferramenta Criada Com Sucesso!'"
+[content]="'Ferramenta criada com sucesso!'"
+(destroyButtonClick)="setStatusModeFalse()">
+</app-status-dialog>
+
 <app-work-dialog 
-*ngIf="isCreateMode"
+*ngIf="isMode01"
 [notebookId]="notebookId"
-(cancelButtonClick)="switchCreateMode()" (confirmButtonClick)="refreshWorks(); switchCreateMode()"
+(cancelButtonClick)="switchMode01()" (confirmButtonClick)="refreshWorks(); switchMode01(); switchStatusMode();"
 type="create" title="Criar Ferramenta de Avaliação">
 </app-work-dialog>
 
 <app-back-arrow></app-back-arrow>
 
-<div [ngClass]="{ 'blur-filter': isCreateMode }" class="works-page-container">
+<div [ngClass]="{ 'blur-filter': isMode01 }" class="works-page-container">
     <h1 class="title-txt">Ferramentas de Avaliação</h1>
     <h1 *ngIf="!isWorksLoaded" class="loading-txt">Carregando...</h1>
     <div *ngIf="isWorksLoaded" class="content-container">
-        <button (click)="switchCreateMode()" class="create-btn">
+        <button (click)="switchMode01()" class="create-btn">
             <h1>Nova Ferramenta de Avaliação</h1>
         </button>
         
@@ -31,8 +38,8 @@ type="create" title="Criar Ferramenta de Avaliação">
         <div class="works-container">
             <div class="works-header">
                 <div><h1>Data</h1></div>
-                <div><h1>Título</h1></div>
-                <div><h1>Tipo</h1></div>
+                <div><h1>Conteúdo</h1></div>
+                <div><h1>Categoria</h1></div>
                 <div><h1>Notas/Alunos</h1></div>
             </div>
             <div *ngFor="let work of worksList" class="works-list">
