Passing 'notebookId' and 'lessonId/workId' through 'Input()'

--- a/src/app/pages/single-lesson-page/single-lesson-page.component.html
+++ b/src/app/pages/single-lesson-page/single-lesson-page.component.html
@@ -6,6 +6,7 @@
 
 <app-attendances-dialog 
 *ngIf="isMode01"
+[notebookId]="notebookId" [lessonId]="lessonId"
 [lessonQuantity]="quantity" [hasAttendances]="attendances !== 0"
 (cancelButtonClick)="switchMode01()" 
 (confirmButtonClick)="switchMode01(); refreshLesson(); setAttendanceStatus(); switchStatusMode();">
