--- a/src/app/pages/single-work-page/single-work-page.component.html
+++ b/src/app/pages/single-work-page/single-work-page.component.html
@@ -6,6 +6,7 @@
 
 <app-grades-dialog
 *ngIf="isMode01"
+[notebookId]="notebookId" [workId]="workId"
 (cancelButtonClick)="switchMode01()">
 </app-grades-dialog>
 
