Setting select backgroud either green or red depending if there is or not, a grade with that student, respectively

--- a/src/app/components/dialog-elements/grades-dialog/grades-dialog.component.css
+++ b/src/app/components/dialog-elements/grades-dialog/grades-dialog.component.css
@@ -138,3 +138,12 @@
 .green-btn:hover {
     background-color: #73a541ce;
 }
+
+
+.grade-exist {
+    background-color: #73a541a5;
+}
+
+.grade-unexist {
+    background-color: #e03437b5;
+}
