--- a/src/app/components/dialog-elements/delete-dialog/delete-dialog.component.html
+++ b/src/app/components/dialog-elements/delete-dialog/delete-dialog.component.html
@@ -32,7 +32,10 @@
 
 
         <div>
-            <button (click)="confirmOnClick()" class="dialog-btn">Confirmar</button>
+            <app-confirm-btn
+            (clickEvent)="confirmOnClick()"
+            [isClicked]="isClicked" [text]="btnText">
+            </app-confirm-btn>
         </div>
     </div>
 </div>
