--- a/src/app/components/dialog-elements/notebook-dialog/create-edit-dialog/notebook-dialog.component.html
+++ b/src/app/components/dialog-elements/notebook-dialog/create-edit-dialog/notebook-dialog.component.html
@@ -78,7 +78,10 @@
             <img src="../../../../../assets/alert_7586991.png">
             <p>Campos marcados com * são obrigatórios</p>
         </div>
-        <button (click)="confirmOnClick()" class="dialog-btn">Salvar</button>
+        <app-confirm-btn
+        (clickEvent)="confirmOnClick()"
+        [isClicked]="isClicked" [text]="btnText">
+        </app-confirm-btn>
     </div>
 </div>
 
