--- a/src/app/components/dialog-elements/user-dialog/user-dialog.component.html
+++ b/src/app/components/dialog-elements/user-dialog/user-dialog.component.html
@@ -43,7 +43,10 @@
 
 
         <div>
-            <button (click)="confirmOnClick()" class="dialog-btn">Salvar</button>
+            <app-confirm-btn
+            (clickEvent)="confirmOnClick()"
+            [isClicked]="isClicked" [text]="btnText">
+            </app-confirm-btn>
         </div>
     </div>
 </div>
