--- a/src/app/components/dialog-elements/work-dialog/work-dialog.component.html
+++ b/src/app/components/dialog-elements/work-dialog/work-dialog.component.html
@@ -71,7 +71,10 @@
 
 
         <div>
-            <button (click)="confirmOnClick()" class="dialog-btn">Salvar</button>
+            <app-confirm-btn
+            (clickEvent)="confirmOnClick()"
+            [isClicked]="isClicked" [text]="btnText">
+            </app-confirm-btn>
         </div>
     </div>
 </div>
